[tool.poetry]
name = "maestro-sdk"
version = "0.1.0"
description = "Python SDK for the Maestro Blockchain Indexer API"
authors = ["Varderes Barsegyan <vbarsegyan@gomaestro.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "maestro_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
dacite = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
